sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:19: error: type mismatch;
 found   : Unit
 required: Boolean
  } while (echangeFait = true)
                       ^